# 42-bangkok

./: 42auth  README.md
.devcontainer/: Dockerfile  create_databases.sh  devcontainer.json  post-create.sh
backend/: Dockerfile  Makefile  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
backend/app/appaccount/tests/: test_api.py  test_models.py  test_serializers.py
backend/app/appcore/tests/: test_models.py  test_services.py
backend/app/appdata/tests/: test_api.py  test_models.py  test_serializers.py
backend/app/apptasks/tests/: test_models.py
frontend/: package.json  zap.config.ts
frontend/app/: drizzle.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/app/: error.tsx  layout.tsx
frontend/app/drizzle/meta/: 0000_snapshot.json  _journal.json
frontend/app/lib/: auth-client.ts  auth.ts
frontend/app/lib/gateway-client/: clients.server.ts  clients.ts
frontend/app/lib/gateway-client/handlers/: sign-in.ts  sign-out.ts
frontend/app/lib/gateway-client/query/: get-me.ts
frontend/app/lib/gateway-client/utils/: query-gateway-token.ts
frontend/app/types/: auth.ts  server-actions.ts
frontend/drizzle/meta/: 0000_snapshot.json  _journal.json
frontend/src/app/(pages)/(auth-only)/app/test/: page.tsx
frontend/src/openapi/: clients.ts  gateway.d.ts
frontend/src/zap/lib/auth/: server.ts  utils.ts
gateway/: requirements.txt
gateway/playground/: base.py
